add new acceptance tests